# louise

./: .gitignore  Makefile  README.md  TODO.txt  pyproject.toml
data/raw/: Artists.csv
data/scripts/: artists.py  artworks.py  classification.py  data.py  data_class.py  data_frames.py  general.py  get_image_for_classification.py  get_images.py  images.py  visualisation.py
data/scripts/images/: get_image_for_classification.py
data/scripts/utils/: utils.py
